[package]
name = "web_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
mojo-rust-sdk = { git = "https://github.com/inspi-writer001/mojo-rust-sdk-v0", default-features = false, branch = "frontend_compatibility" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Url",
    "Event",
] }
js-sys = "0.3"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
bytemuck = { version = "1.15", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom_01 = { package = "getrandom", version = "0.1", features = [
    "wasm-bindgen",
] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
